# termux-app-store

./: .codecov.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  USAGE.md  build-package.sh  install.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  tasctl  termux-build  termux_app_store.py  termux_app_store_cli.py  uninstall.sh
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/workflows/: build.yml  cli-ci.yml  coverage.yml  docs.yml  lint-checker.yml  pr-checker.yml  renovate.yml  update_index.yml  update_log.yml
docs/: CONTRIBUTING.md
template/: build.sh
termux_app_store/: __init__.py  cli.py  ops.py  paths.py  termux_app_store.py  termux_app_store_cli.py  tui.py
tests/: conftest.py  test_cli.py  test_main.py  test_package.py  test_security.py  test_termux_app_store.py  test_termux_app_store_cli.py  test_tools.py  test_version.py
tools/: build.py  colors.sh  index.json  index.schema.json  package_manager.py  termux-build-check-pr.sh  termux-build-doctor.sh  termux-build-explain.sh  termux-build-guide.sh  termux-build-lint.sh  termux-build-suggest.sh  termux-build-template.sh  validate-build.sh
